--- a/SheldonMRossNotes.tex
+++ b/SheldonMRossNotes.tex
@@ -36,7 +36,7 @@
 \newcommand\ddfrac[2]{\frac{\displaystyle #1}{\displaystyle #2}}
 \pagenumbering{gobble}
 
-\includeonly{./TeX_files/chapter14.tex}
+% \includeonly{./TeX_files/chapter14.tex}
 \setlength{\parskip}{12pt}
 
 \begin{document}
@@ -48,20 +48,20 @@
 \maketitle
 \tableofcontents
 
-\include{./TeX_files/chapter01}
-\include{./TeX_files/chapter02}
-\include{./TeX_files/chapter03}
-\include{./TeX_files/chapter04}
-\include{./TeX_files/chapter05}
-\include{./TeX_files/chapter06}
-\include{./TeX_files/chapter07}
-\include{./TeX_files/chapter08}
-\include{./TeX_files/chapter09}
-\include{./TeX_files/chapter10}
-\include{./TeX_files/chapter11}
-\include{./TeX_files/chapter12}
-\include{./TeX_files/chapter13}
-\include{./TeX_files/chapter14}
+% \include{./TeX_files/chapter01}
+% \include{./TeX_files/chapter02}
+% \include{./TeX_files/chapter03}
+% \include{./TeX_files/chapter04}
+% \include{./TeX_files/chapter05}
+% \include{./TeX_files/chapter06}
+% \include{./TeX_files/chapter07}
+% \include{./TeX_files/chapter08}
+% \include{./TeX_files/chapter09}
+% \include{./TeX_files/chapter10}
+% \include{./TeX_files/chapter11}
+% \include{./TeX_files/chapter12}
+% \include{./TeX_files/chapter13}
+% \include{./TeX_files/chapter14}
 % bibliography, glossary and index would go here.
 
 \end{document}
