--- a/SheldonMRossSolutions.tex
+++ b/SheldonMRossSolutions.tex
@@ -1,13 +1,15 @@
 \documentclass[letterpaper,12pt]{report}
 \usepackage[utf8]{inputenc}
+\usepackage{lmodern}
 \usepackage{graphicx}
 \usepackage{fullpage}
-\usepackage[autostyle, english = american]{csquotes}
 \usepackage{enumitem}
+\usepackage[autostyle, english = american]{csquotes}
 \usepackage{amssymb,amsmath}
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage[hidelinks]{hyperref}
 \usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
 \usepackage[font=small,labelfont=bf]{caption}
 \usepackage{booktabs}
 \usepackage{caption}
@@ -20,6 +22,9 @@
 \usepgfplotslibrary{fillbetween}
 \addtolength{\jot}{1ex}
 
+\setlength{\abovedisplayskip}{24pt}
+\setlength{\belowdisplayskip}{24pt}
+
 \usepackage{sectsty}
 \chapterfont{\sffamily \color{MidnightBlue}}
 \sectionfont{\sffamily \color{MidnightBlue}}
@@ -28,6 +33,7 @@
 \setlist[itemize]{after={\bigskip}}
 
 \usepackage{mathtools}
+\setlength{\parskip}{12pt}
 
 \newcommand\Myperm[2][^n]{\prescript{#1\mkern-2.5mu}{}P_{#2}}
 \newcommand\Mycomb[2][^n]{\prescript{#1\mkern-0.5mu}{}C_{#2}}
@@ -36,37 +42,37 @@
 \numberwithin{equation}{enumi}
 
 \begin{document}
-	
+
 	\author{Anirudh Krishnan}
 	\title{Introduction to Probability and Statistics \\ for Engineers and Scientists \\ \textit{\textcolor{blue}{Sheldon M Ross}} \\ Solutions}
 	\date{\today}
-	
+
 	\maketitle
 	\tableofcontents
-	
 
-%	\include{./TeX_files/exercise01_new}
-%	\include{./TeX_files/exercise02_new}
-%	\include{./TeX_files/exercise03_new}
-%	\include{./TeX_files/exercise04_new}
-%	\include{./TeX_files/exercise05_new}
-%	\include{./TeX_files/chapter05}
-%	\include{./TeX_files/exercise06_new}
-%	\include{./TeX_files/exercise07_new}
-%	\include{./TeX_files/chapter08}
-%	\include{./TeX_files/exercise08_new}
-%	\include{./TeX_files/chapter09}
-%	\include{./TeX_files/exercise09_new}
-%	\include{./TeX_files/chapter10}
-%	\include{./TeX_files/exercise10_new}
-%	\include{./TeX_files/chapter11}
-%	\include{./TeX_files/exercise11_new}
-%	\include{./TeX_files/chapter12}
-%	\include{./TeX_files/exercise12_new}
-%	\include{./TeX_files/chapter13}
-%	\include{./TeX_files/exercise13_new}
+
+	% \include{./TeX_files/exercise01_new}
+	% \include{./TeX_files/exercise02_new}
+	% \include{./TeX_files/exercise03_new}
+	% \include{./TeX_files/exercise04_new}
+	% \include{./TeX_files/exercise05_new}
+	% \include{./TeX_files/chapter05}
+	% \include{./TeX_files/exercise06_new}
+	% \include{./TeX_files/exercise07_new}
+	% \include{./TeX_files/chapter08}
+	% \include{./TeX_files/exercise08_new}
+	% \include{./TeX_files/chapter09}
+	% \include{./TeX_files/exercise09_new}
+	% \include{./TeX_files/chapter10}
+	% \include{./TeX_files/exercise10_new}
+	% \include{./TeX_files/chapter11}
+	% \include{./TeX_files/exercise11_new}
+	% \include{./TeX_files/chapter12}
+	% \include{./TeX_files/exercise12_new}
+	% \include{./TeX_files/chapter13}
+	% \include{./TeX_files/exercise13_new}
 	\include{./TeX_files/chapter14}
-%	\include{./TeX_files/exercise14_new}
+	\include{./TeX_files/exercise14_new}
 	% bibliography, glossary and index would go here.
-	
+
 \end{document}
