--- a/TeX_files/exercise03_new.tex
+++ b/TeX_files/exercise03_new.tex
@@ -685,7 +685,7 @@
 			P_A = p^3 / (p^3 + q^3)
 		\end{align}
 		
-		\item Either team A is leading 3-0 and the only losing scenario is team B winning all 4 of the remaning games, or vice versa. 
+		\item Either team A is leading 3-0 and the only losing scenario is team B winning all 4 of the remaining games, or vice versa. 
 		\begin{align}
 			P_B = P_A (1 - q^4) + (1 - P_A)(1 - p^4)
 		\end{align}
